--- a/utils/environment.yml
+++ b/utils/environment.yml
@@ -4,21 +4,21 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python
-  - pip
-  - cudatoolkit
-  - cudnn
-  - cupti
-  - cuda-nvcc
+  - python=3.11.3
+  - pip=23.1.2
+  - cudatoolkit=10.2.89
+  - cudnn=8.0.4
+  - cupti=10.2.89
+  - cuda-nvcc=12.1.105
+  - keras=2.12.0
   - pip:
-    - tensorflow
-  - numpy
-  - pandas
-  - matplotlib
-  - seaborn
-  - scikit-learn
-  - keras
-  - ipykernel
+    - tensorflow=2.12.0
+  - numpy=1.24.3
+  - pandas=2.0.1
+  - matplotlib=3.7.1
+  - seaborn=0.12.2
+  - scikit-learn=1.2.2
+  - ipykernel=6.22.0
 variables:
   TF_CPP_MIN_LOG_LEVEL: 3
   LD_LIBRARY_PATH: /home/matheusmbr/.conda/envs/data4all_case_venv/lib
